Finalize Queue